--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scene It</title>
     <link
       rel="stylesheet"
@@ -17,6 +19,7 @@
           <h2 class="display-2">Scene It</h2>
           <p>Search for movies you want to watch.</p>
           <p>Save them to your list</p>
+          <a href="./watchlist.html">Go to my watchlist</a>
         </div>
       </div>
       <div class="row">
@@ -26,6 +29,7 @@
               <input
                 class="form-control search-bar"
                 placeholder="Search for a movie..."
+                id="search-bar"
               />
               <button class="btn btn-primary input-group-btn" type="submit" id="button">
                 Search
