--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scene It</title>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -31,9 +32,8 @@
                 placeholder="Search for a movie..."
                 id="search-bar"
               />
-              <button class="btn btn-primary input-group-btn" type="submit" id="button">
-                Search
-              </button>
+              <input value="Search" class="btn btn-primary input-group-btn" type="submit" id="button">
+                
             </div>
           </form>
         </div>
